type effect modified

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -193,68 +193,57 @@ img{
 .home__data{
   align-self: center;
 }
-/*
-.wrap{
-  display: flex;
-  display: flex;
-    align-items: center;
+
+/* fvffrfrffrffvfvf */
+
+
+.contain{
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    min-height: 30vh;
-    background: #ffffff;
+    height: 100%;
+    padding: 0 3rem;
+
 }
-.wrapper{
-  display: inline-flex;
- 
-} */
-.wrapper .static-txt{
- font-size: 30px;
- color: rgb(0, 0, 0);
- font-weight: 400;
-}
-.wrapper .dynamic-txts{
-  margin-left: 5px;
-  line-height: 90px;
-  height: 90px;
- 
-  overflow: hidden; 
- 
-}
-.dynamic-txts li{
-  list-style: none;
-  font-size: 30px;
-  font-weight: 50;
-  color: #5498e6;
-  position: relative;
-  top: 0;
-  animation: slide 6s steps(4) infinite;
-}
-@keyframes slide{
-  100%{
-     top:  -360px;
-  }
+h1{
+    font-weight: 200;;
+    margin: 0.4rem;
+    font-size: 3.5rem;
+    color: #2e9ad8;
 }
 
-.dynamic-txts li span{
-  position: relative;
+/* pointer */
+.txt-type > .txt {
+    border-right: 0.2rem solid #777;
 }
-.dynamic-txts li span::after{
-  content: "";
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  left: 0;
- background: #ffffff;
  
-  animation: typing 1.5s steps(9) infinite;
+@media(min-width: 1200px){
+    h1{
+        font-size: 5rem;
+    }
 }
-@keyframes typing{
-  100%{
-      left: 100%;
-      margin: 0 -35px 0 35px;
-  }
+
+@media(max-width: 800px){
+    .contain{
+        padding: 0 1rem;
+    }
+    h1{
+        font-size: 3.5rem;
+    }
+}
+
+@media(max-width: 500px){
+    h1{
+        font-size: 2.0rem;
+    }
+  
 }
 
 
+
+
+
+/* dvgbgthty */
 
 .home__social{
   display: flex;
@@ -420,7 +409,7 @@ img{
   border-radius: 15px;
   box-shadow: 0 20px 20px 0 rgba(252, 169, 169 0.6);
   display: flex;
-  padding: 30px 30px;
+  padding: 10px 23px;
   position: relative;
   margin: 10px 10px;
   
