--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -263,7 +263,7 @@ h1 {
 }
 
 /*BUTTONS*/
-.button {
+.call_button {
   display: inline-block;
   background-color: var(--first-color);
   color: #fff;
@@ -534,8 +534,9 @@ h1 {
     margin-right: var(--mb-4);
   }
   .home__img {
-    width: 457px;
-    bottom: 15%;
+    width: 300px;
+    height: 300px;
+    bottom: 25%;
   }
 
   .about__container,
